fix: mixing export and humogus font size on mobile

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -55,6 +55,12 @@ html {
     font-size: 28px;
 }
 
+@media screen and (width < 768px) {
+    html {
+        font-size: 16px;
+    }
+}
+
 body {
     color: var(--text);
 }
